payment implementation done

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "stripe": "^12.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
